[W-4248012] Fixes extra space in IE11 (#1584)

--- a/aura-components/src/main/components/ui/tooltip/tooltip.css
+++ b/aura-components/src/main/components/ui/tooltip/tooltip.css
@@ -40,7 +40,6 @@
 	clip: rect(1px, 1px, 1px, 1px);
     position: absolute !important;
     height: 1px;
-    width: 1px;
     overflow: hidden;
 }
 
